Autosmooth/sculpt/viewport bug #46726

Closed
opened 2015-11-08 17:31:40 +01:00 by Paul · 13 comments

System Information
windows 8.1 surface pro intel HD 4000 ;
windows 7 nvidia geforece Gtx 560

Blender Version
Broken: 2.76b
Worked: (optional)

Short description of error
viewport does not update shading of model while sculpting on meshes with matcap set throught shadeless material with texture mapped to normal and Autosmoth checkbox checked in Normals section of object Data.

Exact steps for others to reproduce the error
Create suzanne, add material in Blender Internal and check shadeless in shading section, go to texture tab. Add texture and choose any of this round ball images like here
https://www.google.pl/search?q=matcap+material&source=lnms&tbm=isch&sa=X&ved=0CAcQ_AUoAWoVChMIlrG2vZqByQIVCf5yCh1U2QDa&biw=2000&bih=969&dpr=0.8

go to mapping section and choose normal from coordinates section. Then go to object Data tab and check autosmooth checkbox.

Then add multiresolution subdivide few times, go to sculpt mode and start sculpting. Shading of model will update only if you exit sculpt mode and move back to sculpt mode.
blender_bug.blend

**System Information** windows 8.1 surface pro intel HD 4000 ; windows 7 nvidia geforece Gtx 560 **Blender Version** Broken: 2.76b Worked: (optional) **Short description of error** viewport does not update shading of model while sculpting on meshes with matcap set throught shadeless material with texture mapped to normal and Autosmoth checkbox checked in Normals section of object Data. **Exact steps for others to reproduce the error** Create suzanne, add material in Blender Internal and check shadeless in shading section, go to texture tab. Add texture and choose any of this round ball images like here https://www.google.pl/search?q=matcap+material&source=lnms&tbm=isch&sa=X&ved=0CAcQ_AUoAWoVChMIlrG2vZqByQIVCf5yCh1U2QDa&biw=2000&bih=969&dpr=0.8 go to mapping section and choose normal from coordinates section. Then go to object Data tab and check autosmooth checkbox. Then add multiresolution subdivide few times, go to sculpt mode and start sculpting. Shading of model will update only if you exit sculpt mode and move back to sculpt mode. [blender_bug.blend](https://archive.blender.org/developer/F253787/blender_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @riceart

Added subscriber: @riceart

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Autosmooth was never supported in sculpt mode as far as I know.

Autosmooth was never supported in sculpt mode as far as I know.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Antonis Ryakiotakis self-assigned this 2015-11-09 22:04:40 +01:00

I'll be closing this as not supported. Regenerating autosmooth normals in sculpt mode would make sculpting quite slow anyway. It's just not possible to work like that.

I'll be closing this as not supported. Regenerating autosmooth normals in sculpt mode would make sculpting quite slow anyway. It's just not possible to work like that.
Author

Im not asking here to add autosmooth to sculpting. I think that turning autosmooth option off everytime someone enters sculpt mode might be solution for this. Leaving this unresolved will be confusing for some people.

Regards.

Im not asking here to add autosmooth to sculpting. I think that turning autosmooth option off everytime someone enters sculpt mode might be solution for this. Leaving this unresolved will be confusing for some people. Regards.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

You have a point let me check if it;s possible

You have a point let me check if it;s possible

As said above, just adding

	Mesh *me = (Mesh *)ob->data;

	if (me->flag & ME_AUTOSMOOTH)
		DAG_id_tag_update(&me->id, 0);

in sculpt_flush_update makes this work. You can even see custom normals now, but speed-wise it's unusable. The problem with mesh autosmooth is that it's a mesh variable and at the time we upload normal uploads GPU we only have access to the derivedmesh. It's probably possible to somehow hack this in though.

As said above, just adding ``` Mesh *me = (Mesh *)ob->data; if (me->flag & ME_AUTOSMOOTH) DAG_id_tag_update(&me->id, 0); ``` in sculpt_flush_update makes this work. You can even see custom normals now, but speed-wise it's unusable. The problem with mesh autosmooth is that it's a mesh variable and at the time we upload normal uploads GPU we only have access to the derivedmesh. It's probably possible to somehow hack this in though.
Author

Sorry to bother, but trick with autosmooth checkbox works only if i use multiresolution modifier. I just discovered that if i apply midifier i get same visual bug no matter what position autosmooth check box is left. You can check this by downloading file that i atached in first post and just apply multiress modifier then try to sculpt.

Regards,

Sorry to bother, but trick with autosmooth checkbox works only if i use multiresolution modifier. I just discovered that if i apply midifier i get same visual bug no matter what position autosmooth check box is left. You can check this by downloading file that i atached in first post and just apply multiress modifier then try to sculpt. Regards,

This issue was referenced by 4d33c37c9e

This issue was referenced by 4d33c37c9eb4fc46482f7b2a7227b54c5cfda07a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46726
No description provided.